# TrustVar

./: .gitignore  .gitlab-ci.yml  Dockerfile.celery  Dockerfile.streamlit  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/adapters/: api_adapter.py  base.py  factory.py  hf_adapter.py  ollama_adapter.py
src/api/: main.py
src/api/routes/: datasets.py  models.py  tasks.py
src/config/: constants.py  settings.py
src/core/models/: dataset.py  model.py  task.py
src/core/schemas/: dataset.py  model.py  task.py
src/core/services/: ab_test_analyzer.py  dataset_service.py  eval_service.py  include_exclude_evaluator.py  judge_service.py  model_service.py  rta_evaluator.py  task_service.py
src/core/tasks/: celery_app.py  health_check_task.py  inference_task.py  model_download_task.py  run_inference.py  variation_task.py
src/database/: mongodb.py
src/database/repositories/: base.py  dataset_repository.py  model_repository.py  task_repository.py
src/ui/: api_client.py  app.py  home.py
src/ui/components/: dataset_uploader.py  datasets_section.py  general_section.py  models_section.py  results_section.py  spider_chart_variations.py  task_monitor.py  tasks_section.py
src/ui/pages/: dataset_page.py  task_page.py
src/ui/styles/: custom_styles.py
src/utils/: cache.py  logger.py
